tests/expectations/compiler/structs/duplicate_struct_variable.out
Error [ETYC0372015]: Struct Bar defined with more than one member with the same name.
    --> compiler-test:5:9
     |
   5 |         x: u32,
     |         ^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
